2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvement.

2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Fixed SIGSEGV that occured for extremly low values of --max-allocs-per-node.

2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3381400.c:
	  Fixed bug #3381400.

2011-08-03 Borut Razem <borut.razem AT gmail.com>

	* support/regression/Makefile.in,
	  support/regression/ports/ds390/spec.mk:
	  added m4 preprocessing of .m4 regtest files
	* support/regression/tests/compare_2_n.m4:
	  adopted for m4 preprocessing, renamed to .m4
	* support/regression/m4include/*: added

2011-08-01 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/inline.c:
	  excluded failing regression test case on Mac OS X GCC 4.0.1

2011-07-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c(genEndFunction): added mov PSW removal based on patch
	  2702889 by Hubert Sack
	* src/mcs51/ralloc.c: added findAllBankregs, mcs51_allBankregs
	* src/mcs51/ralloc.h: added mcs51_allBankregs

2011-07-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_setjmp.c: fixed mcs51 stack-auto and xstack implementations
	* src/SDCCopt.c(miscOpt): added my doubts
	* support/regression/tests/bug3379723.c: disabled for hc08 which has no sfr
	* support/regression/tests/setjmp.c: test only on supported targets
	* support/regression/tests/bug3361290.c,
	* support/regression/tests/bug3366711.c,
	* support/regression/tests/bug3379723.c: set native eolstyle property

2011-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/setjmp.h,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/setjmp.s,
	  support/regression/tests/setjmp.c:
	  setjmp() and longjmp() for the Z80.

2011-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/setjmp.h,
	  device/lib/_setjmp.c,